# Aeglos.OS

./: .gitignore  AEGLOS_OS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
aska/: Cargo.toml
aska/src/: gui.rs  intent.rs  lib.rs  render.rs  shell.rs
docs/: PHASE0.md  SPEC.md
kernel/: Cargo.toml  aarch64-unknown-none.json  build.rs  linker.ld
kernel/src/: boot.rs  boot_logo.rs  config.rs  csprng.rs  dtb.rs  main.rs  platform.rs  smp.rs
kernel/src/arch/aarch64/: aic.rs  cache.rs  exceptions.rs  gic.rs  mmu.rs  mod.rs  timer.rs
kernel/src/drivers/: compositor.rs  e1000.rs  font.rs  framebuffer.rs  fwcfg.rs  hda.rs  mod.rs  nvme.rs  pcie.rs  simplefb.rs  uart.rs  usb_pd.rs  virtio.rs  virtio_gpu.rs  virtio_input.rs  virtio_net.rs
kernel/src/fs/: fat32.rs  mod.rs
kernel/src/ipc/: mod.rs
kernel/src/memory/: heap.rs  mod.rs  page.rs  vmm.rs
kernel/src/net/: arp.rs  dhcp.rs  dns.rs  http.rs  httpd.rs  icmp.rs  icmpv6.rs  mod.rs  ndp.rs  tcp.rs  tls.rs  udp.rs  ws.rs  x509.rs
kernel/src/process/: elf.rs  mod.rs  scheduler.rs  task.rs
kernel/src/syscall/: mod.rs
kernel/src/wasm/: interp.rs  memory.rs  mod.rs
numenor/: Cargo.toml  build.rs
numenor/src/: engine.rs  ipc.rs  lib.rs  model.rs
numenor/src/cpp/: backend_reg.cpp  chrono_stub.cpp  errno.c  llm_engine.cpp  llm_engine.h  shim.cpp
semantic/: Cargo.toml
semantic/src/: block_manager.rs  hash.rs  index.rs  lib.rs  metadata.rs  query.rs  store.rs  vector.rs
tools/: build.sh  fetch_location.sh  fetch_vendor.sh  grub.cfg  import_boot_logo.py  pkg_server.py
userspace/ash/: Cargo.toml  build.rs  linker.ld
userspace/ash/src/: auth.rs  fonts.rs  (+5 more)
userspace/bootloader/: Cargo.toml
userspace/bootloader/src/: main.rs
userspace/installer/: Cargo.toml  linker.ld
website/: GO_TO_MARKET.md  PRODUCT_CATALOGUE.md  TRADEMARK_APPLICATION_DRAFT.md  index.html
(+30 files in other folders)
