[package]
name = "aeglos"
version = "0.1.0"
edition = "2021"
authors = ["Aeglos Systems LLC"]
description = "Aeglos OS — AI-native microkernel for AArch64"
build = "build.rs"

[dependencies]
libm = "0.2.16"
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["const_mut_refs", "use_spin"] }
numenor = { path = "../numenor" }
semantic = { path = "../semantic" }
x25519-dalek = { version = "2", default-features = false, features = ["alloc", "static_secrets"] }
sha2 = { version = "0.10", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hmac = { version = "0.12", default-features = false }
hkdf = { version = "0.12", default-features = false }
rand_core = { version = "0.6", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
